--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="theme">#6735A5</color>
+
+    <color name="service_btn_nor">#985CC9</color>
+    <color name="service_btn_sel">#B57DE4</color>
+
 </resources>
